@@ -403,8 +403,8 @@ public class ViewCMSMaintenanceAction extends DotPortletAction {
 		}
 		finally
 		{
-			req.setAttribute(WebKeys.Cache.CACHE_NUMBER_LIVE_FILES,new Integer(liveCount));
-			req.setAttribute(WebKeys.Cache.CACHE_NUMBER_WORKING_FILES,new Integer(workingCount));
+			req.setAttribute(WebKeys.Cache.CACHE_NUMBER_LIVE_FILES,Integer.valueOf(liveCount));
+			req.setAttribute(WebKeys.Cache.CACHE_NUMBER_WORKING_FILES,Integer.valueOf(workingCount));
 		}
 	}
 
@@ -412,7 +412,7 @@ public class ViewCMSMaintenanceAction extends DotPortletAction {
 	private Map<String,String> searchAndReplace(CmsMaintenanceForm form) throws DotDataException{
 
 		String message="";
-		Map<String,String> messageResult = new HashMap<String,String>();
+		Map<String,String> messageResult = new HashMap<>();
 		boolean isAdmin = false;
 
 		if (UtilMethods.isSet(form.getUserId())) {
