@@ -15,7 +15,6 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -163,18 +162,18 @@ public class Task04115LowercaseIdentifierUrls implements StartupTask {
 
 	private List<String> getDisableTriggerQuery() {
 		return DbConnectionFactory.isMsSql() ? SQLUtil.tokenize(MS_SQL_DISABLE_TRIGGER)
-			: DbConnectionFactory.isMySql() ? Collections.singletonList("DROP TRIGGER IF EXISTS check_parent_path_when_update")
-				: DbConnectionFactory.isOracle() ? Collections.singletonList("ALTER TRIGGER identifier_parent_path_check DISABLE")
-					: DbConnectionFactory.isPostgres() ? Collections.singletonList("ALTER TABLE identifier DISABLE TRIGGER identifier_parent_path_trigger")
-						: Collections.singletonList("");
+			: DbConnectionFactory.isMySql() ? List.of("DROP TRIGGER IF EXISTS check_parent_path_when_update")
+				: DbConnectionFactory.isOracle() ? List.of("ALTER TRIGGER identifier_parent_path_check DISABLE")
+					: DbConnectionFactory.isPostgres() ? List.of("ALTER TABLE identifier DISABLE TRIGGER identifier_parent_path_trigger")
+						: List.of("");
 	}
 
 	private List<String> getEnableTriggerQuery() {
-		return DbConnectionFactory.isMsSql() ? Collections.singletonList("ALTER TABLE identifier ENABLE TRIGGER check_identifier_parent_path")
+		return DbConnectionFactory.isMsSql() ? List.of("ALTER TABLE identifier ENABLE TRIGGER check_identifier_parent_path")
 			: DbConnectionFactory.isMySql() ? SQLUtil.tokenize(MY_SQL_CREATE_TRIGGER)
-				: DbConnectionFactory.isOracle() ? Collections.singletonList("ALTER TRIGGER identifier_parent_path_check ENABLE")
-					: DbConnectionFactory.isPostgres() ? Collections.singletonList("ALTER TABLE identifier ENABLE TRIGGER identifier_parent_path_trigger")
-                        : Collections.singletonList("");
+				: DbConnectionFactory.isOracle() ? List.of("ALTER TRIGGER identifier_parent_path_check ENABLE")
+					: DbConnectionFactory.isPostgres() ? List.of("ALTER TABLE identifier ENABLE TRIGGER identifier_parent_path_trigger")
+                        : List.of("");
 	}
 
 	private final String MS_SQL_DISABLE_TRIGGER = "SET TRANSACTION ISOLATION LEVEL READ COMMITTED;\n"
