@@ -19,6 +19,7 @@ public class Portlet extends PortletModel {
   private final Map<String, String> initParams;
   private final String portletClass, portletSource;
 
+  public static final String MAINTENANCE = "maintenance";
     public static final String DATA_VIEW_MODE_KEY = "dataViewMode";
 
   @Deprecated
@@ -181,7 +182,7 @@ public class Portlet extends PortletModel {
 
     try {
       if (cachedInstance == null) {
-        com.dotcms.repackage.javax.portlet.Portlet realPortlet = (com.dotcms.repackage.javax.portlet.Portlet) Class.forName(getPortletClass()).newInstance();
+        com.dotcms.repackage.javax.portlet.Portlet realPortlet = (com.dotcms.repackage.javax.portlet.Portlet) Class.forName(getPortletClass()).getDeclaredConstructor().newInstance();
         ConcretePortletWrapper newOne = new ConcretePortletWrapper(realPortlet, portletConfig.getPortletContext());
         newOne.init(portletConfig);
         cachedInstance = newOne;
