@@ -81,7 +81,7 @@ public class JJTParserState implements Serializable {
 
 
   public void openNodeScope(Node n) {
-    marks.add(new Integer(mk));
+    marks.add(Integer.valueOf(mk));
     mk = sp;
     n.jjtOpen();
   }
